# lv_lib_100ask

./: CMakeLists.txt  Kconfig  README.md  README_zh.md  component.mk  lv_lib_100ask.h  lv_lib_100ask_conf_internal.h  lv_lib_100ask_conf_template.h
.github/workflows/: push_to_esp-idf_components.yml
examples/lv_100ask_2048/: lv_100ask_example_2048.c  lv_100ask_example_2048.h
examples/lv_100ask_calc/: lv_100ask_example_calc.c  lv_100ask_example_calc.h
examples/lv_100ask_file_explorer/: lv_100ask_example_file_explorer.c  lv_100ask_example_file_explorer.h
examples/lv_100ask_memory_game/: lv_100ask_example_memory_game.c  lv_100ask_example_memory_game.h
examples/lv_100ask_nes/: lv_100ask_example_nes.c  lv_100ask_example_nes.h
examples/lv_100ask_page_manager/: lv_100ask_example_page_manager.c  lv_100ask_example_page_manager.h
examples/lv_100ask_pinyin_ime/: lv_100ask_example_pinyin_ime.c  lv_100ask_example_pinyin_ime.h
examples/lv_100ask_screenshot/: lv_100ask_example_screenshot.c  lv_100ask_example_screenshot.h
examples/lv_100ask_sketchpad/: lv_100ask_example_sketchpad.c  lv_100ask_example_sketchpad.h
src/lv_100ask_2048/: README.md  README_zh.md  lv_100ask_2048.c  lv_100ask_2048.h
src/lv_100ask_calc/: README.md  README_zh.md  lv_100ask_calc.c  lv_100ask_calc.h
src/lv_100ask_chinese_ime/: README.md  README_zh.md  cJSON.c  cJSON.h  lv_100ask_chinese_ime.c  lv_100ask_chinese_ime.h  zh_cn_pinyin_dict.c
src/lv_100ask_file_explorer/: README.md  README_zh.md  lv_100ask_file_explorer.c  lv_100ask_file_explorer.h
src/lv_100ask_memory_game/: README.md  (+3 more)
(+70 files in other folders)
